homepage/styles.css
body {
    color: rgb(0, 0, 0);
    font-family: 'Arial', sans-serif;
    padding: 20px;
    margin: 0;
    justify-content: center;  
    min-height: 100vh;        /* Ensures the body is at least the height of the viewport */
    display: flex;
    align-items: center;  
}

#outer-container-div {
    display: flex;
    flex-direction: column;
    background: #121111;
    height: 100%;
    width: 100%;
    margin: 0 auto;
    justify-content: center;  
    align-items: center;
    width: 100%;
}



header h1 {
    font-size: 7vw; /* Adjusted for responsiveness */
    color: #FF00FF; /* Magenta, similar to your screenshot */
    text-align: center;
    margin: 0.5em 0;
}

header p {
    font-size: 4.5vw; /* Adjusted for responsiveness */
    color: white;
    text-align: center;
    margin: 0.25em 0;
}

button {
    background-color: #FF00FF;
    border: none;
    color: white;
    padding: 1em 2em;
    font-size: 3vw; /* Adjusted for responsiveness */
    cursor: pointer;
    border-radius: 5px;
    margin: 20px 0;
    transition: background-color 0.3s;
}

button:hover {
    background-color: #ff66ff;
}

footer p {
    font-size: 3vw; /* Adjusted for responsiveness */
    text-align: center;
    color: #FF00FF;
}

